# Shooper

./: IMPLEMENTATION_STATUS.md  Planner.md  RAILWAY-SETUP.md  SPRINT-0-SETUP.md  SPRINT-1-COMPLETE.md  V1-INFRASTRUCTURE-SIMPLIFICATION.md  docker-compose.yml
.github/workflows/: backend-ci.yml
Completed/: Sprint-4-Complete.md
NotImplemented/: Sprint-4-NotImplemented.md
Skills/: RULES.md
Sprints/: README.md  Sprint-0-Foundations.md  Sprint-1-Skeleton.md  Sprint-2-Search-Profile-Creation.md  Sprint-3-Multi-Source-Crawling.md  Sprint-4-Matching-and-Ranking.md  Sprint-5-User-Listings.md  Sprint-5-WhatsApp-Integration.md  Sprint-6-Polish-Hardening-Dogfood.md  Sprint-7-Beta-Launch.md
Sprints/Completed/: Sprint-5-Complete.md
autoscout-backend/: .gitignore  API.md  Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml
autoscout-backend/autoscout/: __init__.py  main.py  settings.py
autoscout-backend/autoscout/auth/: dependencies.py  firebase.py  schemas.py
autoscout-backend/autoscout/db/: models.py  session.py
autoscout-backend/autoscout/listings/: router.py  schemas.py
autoscout-backend/autoscout/matches/: router.py  schemas.py
autoscout-backend/autoscout/matching/: filters.py  pipeline.py  scorer.py  worker.py
autoscout-backend/autoscout/profiles/: router.py  schemas.py
autoscout-backend/migrations/: env.py
autoscout-backend/migrations/versions/: 0001_initial_schema.py  0002_fk_and_jsonb.py  0003_search_profile_fields.py  0004_llm_calls.py  0005_listing_uniqueness.py  0006_matches_schema.py  0007_listing_vehicle_attrs.py  0008_listing_seller_fields.py
autoscout-backend/tests/: conftest.py  test_listings.py  test_matching_filters.py  test_matching_pipeline.py  test_matching_scorer.py  test_security.py
autoscout-crawlers/: Dockerfile  README.md  celerybeat-schedule  pyproject.toml
autoscout-crawlers/crawler/: __init__.py  __main__.py  db.py  models.py  persistence.py  settings.py  worker.py
autoscout-crawlers/crawler/sources/: base.py  gjirafa.py  merrjep.py  mobile_al.py  njoftime.py  registry.py
autoscout-docs/: README.md  twilio-integration.md
autoscout-mobile/: .env.example  .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
autoscout-mobile/app/: _layout.tsx  my-listings.tsx  post-listing.tsx  profile-form.tsx
autoscout-mobile/app/(auth)/: _layout.tsx  otp.tsx  signup.tsx
autoscout-mobile/app/(tabs)/: _layout.tsx  browse.tsx  history.tsx  searches.tsx  settings.tsx
autoscout-mobile/app/listing/: [id].tsx
autoscout-mobile/app/match/: [id].tsx
autoscout-mobile/assets/: create_placeholders.sh
autoscout-mobile/lib/: api.ts  firebase.ts
autoscout-mobile/store/: authStore.ts  profileStore.ts
autoscout-prompts/: README.md  test_harness.py
autoscout-prompts/profile_parser/: run_tests.py  tests.yaml  v1.md
autoscout-prompts/ranking/: test_cases.json  v1.md
