[tool.poetry]
name = "autoscout-crawlers"
version = "0.1.0"
description = "AutoScout crawler workers"
authors = ["AutoScout Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
celery = "^5.3.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
pydantic-settings = "^2.0.0"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
